# vllm-grpc

./: .gitignore  ANALYSIS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  graphify.json  ground-truth-workflow-for-associated-projects.md  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml  proto.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
contracts/: instrumentation.md
demo/: curl-rest.sh  grpc-direct.py  openai-sdk.py  streaming.py
docs/: PLAN.md
docs/benchmarks/: m3-channel-tuning-time.json  m3-channel-tuning-time.md  m3-channel-tuning.json  m3-channel-tuning.md  m4-time-axis-tuning.json  m4-time-axis-tuning.md  m5-cross-host-validation.json  m5-cross-host-validation.md  m5_1-rest-vs-grpc.json  m5_1-rest-vs-grpc.md  m5_2-transport-vs-tuning.json  m5_2-transport-vs-tuning.md  m6-real-engine-mini-validation.json  m6-real-engine-mini-validation.md  m6_0a-dispatch-correction.md  m6_1-real-prompt-embeds.json  m6_1-real-prompt-embeds.md  m6_1_1-audit-2026-05-16-seq-dispatch.md  m6_1_1-engine-cost-instrumentation.json  m6_1_1-engine-cost-instrumentation.md  m6_1_2-methodology-discipline.json  m6_1_2-methodology-discipline.md  phase-3-ci-baseline.json  phase-3-ci-baseline.md  phase-3-modal-comparison.md  phase-3-modal-grpc-baseline.json  phase-3-modal-grpc-baseline.md  phase-3-modal-rest-baseline.json  phase-3-modal-rest-baseline.md  phase-4.2-grpc-direct-baseline.json  phase-4.2-grpc-direct-baseline.md  phase-4.2-grpc-proxy-baseline.json  phase-4.2-rest-baseline.json  phase-4.2-three-way-comparison.md  phase-5-grpc-direct-streaming.json  phase-5-grpc-proxy-streaming.json  phase-5-rest-streaming.json  phase-5-streaming-comparison.md  phase-6-completions-comparison.md  phase-6-completions-grpc-direct.json  (+3 more)
docs/decisions/: 0001-prompt-embeds-environment.md  0002-modal-deployment.md  0003-streaming-design.md  0004-completions-design.md  0005-m3-statistical-methodology.md
docs/notes/: corpus-distribution-issue.md  vllm-embedding-input-limitation.md
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json
logs/: m4-full.current
scripts/curl/: chat-nonstreaming-modal.sh  chat-nonstreaming.sh  healthz.sh
scripts/python/: bench_modal.py  chat-nonstreaming.py  gen_chat_corpus.py  gen_embed_corpus.py  modal_bench_grpc_server.py  modal_bench_rest_grpc_server.py  modal_download_weights.py  modal_frontend_serve.py  modal_frontend_smoke.py  modal_vllm_rest.py  regen_bench_reports.py  reprocess_m5_supersede.py  verify_prompt_embeds.py  verify_prompt_embeds_modal.py
scripts/setup/: phase2-env.sh
specs/001-phase1-scaffolding/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-phase2-prompt-embeds/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-chat-bridge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-benchmark-harness/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-modal-grpc-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-modal-grpc-tunnel/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-modal-real-baselines/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-grpc-client-library/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tools/benchmark/: pyproject.toml
tools/benchmark/corpus/: chat_nonstreaming.json  chat_sharegpt_1000.json  chat_sharegpt_1000.provenance.json  completions_text.json  m3_long_stream.json
tools/benchmark/corpus/completions_embeds/: 00.pt  01.pt  02.pt  03.pt  04.pt  05.pt  06.pt  07.pt  08.pt  09.pt  10.pt  11.pt  12.pt  13.pt  14.pt  15.pt  16.pt  17.pt  18.pt  19.pt  manifest.json  prompts.txt
tools/benchmark/docs/benchmarks/: m6_1_1-engine-cost-instrumentation.md
tools/benchmark/src/vllm_grpc_bench/: __main__.py  channel_config.py  ci.py  compare.py  corpus.py  fake_server.py  io.py  m3_sweep.py  m3_types.py  m4_supersede.py  m4_sweep.py  m5_1_grpc_cohort.py  m5_1_supersede.py  m5_1_sweep.py  m5_2_events.py  m5_2_regen.py  m5_2_supersede.py  m5_2_sweep.py  m5_2_symmetry.py  m5_supersede.py  m5_sweep.py  m6_1_1_classifier.py  m6_1_1_contracts_check.py  m6_1_1_diagnose.py  m6_1_1_embed_regression.py  m6_1_1_perturbation.py  m6_1_1_phase2.py  m6_1_1_reporter.py  m6_1_1_supersedence.py  m6_1_1_sweep.py  m6_1_1_timing.py  m6_1_1_types.py  m6_1_2_network_probe.py  m6_1_2_reporter.py  m6_1_2_sweep.py  m6_1_2_types.py  m6_1_2_validate.py  m6_1_drift_check.py  m6_1_reporter.py  m6_1_rpc_driver.py  (+24 more)
tools/benchmark/tests/: conftest.py  test_channel_config.py  test_chat_corpus_parity.py  test_chat_payload_parity.py  test_ci.py  test_compare.py  test_corpus.py  test_endpoint_provider.py  test_m3_cli_args.py  test_m3_sweep_metrics.py  test_m3_sweep_smoke.py  test_m4_baseline_cv.py  test_m4_cli.py  test_m4_cli_schema.py  test_m4_client_bound.py  test_m4_frozen_baseline.py  test_m4_loopback_caveat.py  test_m4_proto_candidates.py  test_m4_recommendations.py  test_m4_report_schema.py  test_m4_schema_baseline.py  test_m4_schema_cascade.py  test_m4_schema_negative_appendix.py  test_m4_supersede.py  test_m4_sweep.py  test_m4_types.py  test_m4_validator.py  test_m4_warmup.py  test_m5_1_cli.py  test_m5_1_reporter.py  test_m5_1_supersede.py  test_m5_1_sweep.py  test_m5_1_types.py  test_m5_2_cli.py  test_m5_2_events_sidecar.py  test_m5_2_preemption_resilience.py  test_m5_2_regenerator.py  test_m5_2_reporter.py  test_m5_2_supersede.py  test_m5_2_sweep.py  (+69 more)
tools/benchmark/tests/fixtures/: m1_time_axis_cells.json
(+200 files in other folders)
