[project]
name = "vllm-grpc"
version = "0.0.0"
requires-python = ">=3.12"
description = "Protobuf/gRPC frontend for vLLM"
readme = "README.md"
dependencies = []

[tool.uv.workspace]
members = ["packages/gen", "packages/proxy", "packages/frontend"]

[dependency-groups]
dev = [
    "grpcio-tools>=1.65",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "grpc-stubs>=1.53",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["vllm_grpc.*", "grpc_tools.*"]
ignore_errors = true
