[project]
name = "vllm-grpc-bench"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "psutil>=5.9",
    "vllm-grpc-client",
]

[tool.uv.sources]
vllm-grpc-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vllm_grpc_bench"]
