[project]
name = "vllm-grpc-bench"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "numpy>=1.26",
    "psutil>=5.9",
    # M6.1 (FR-006): pinned to vllm==0.20.1's transitive requirement so
    # client-side torch.save bytes deserialise on the server-side decode_embeds
    # call. Future bumps MUST stay in sync with the project's vllm pin.
    "torch==2.11.0",
    "vllm-grpc-client",
]

[tool.uv.sources]
vllm-grpc-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vllm_grpc_bench"]
